# data-quality-pipeline

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: generate_ecommerce.py  generate_hr.py  generate_hr_clean.py  generate_medical.py  generate_synthetic.py
data/processed/: cleaned_data.csv
data/raw/: ecommerce_messy.csv  hr_clean.csv  hr_messy.csv  medical_messy.csv
docs/: architecture.md  data_quality_report.md
evals/: runner.py
evals/expected/: ecommerce_expected.json  hr_clean_expected.json  hr_expected.json  medical_expected.json
src/data_quality_pipeline/: invariants.py  jobs.py  models.py  pipeline.py  server.py  tools.py
src/data_quality_pipeline/agents/: profiler.py  repairer.py  reporter.py  validator.py
static/: index.html
tests/: test_invariants.py  test_profiler.py  test_repairer.py  test_tools.py  test_validator.py
