[project]
name = "data-quality-pipeline"
version = "0.1.0"
description = "Dataset-agnostic multi-agent data quality pipeline using PydanticAI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.0.14",
    "anthropic>=0.25.0",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "faker>=21.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "python-dateutil>=2.9.0",
    "scipy>=1.17.1",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "python-multipart>=0.0.28",
    "markdown>=3.10.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "llm: tests that call the live LLM API (deselect with '-m not llm')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_quality_pipeline"]
